manifests/2048-game/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048-service
  namespace: default
spec:
  selector:
    app: game-2048
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
